--- a/index.html
+++ b/index.html
@@ -621,6 +621,19 @@
             <a href="https://www.linkedin.com/in/parthjohri07/" class="btn btn-primary">LinkedIn</a>
             </div>
         </div>
+          <!-- Rishika Profile -->
+          <div class="card"
+          style="width: 17rem; margin:20px;border-radius: 10%;box-shadow: 2px 2PX 15PX 15PX rgb(104, 102, 102);">
+          <img src="images/download.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Rishika Jain</h5>
+            <p class="card-text">Hello, I am Rishika Jain.Currently pursuing Btech in Information Technology from
+              Bhilai Institute Of Technology Durg.</p>
+            <a href="https://github.com/rjrishika" class="btn btn-primary"> Github</a>
+            <a href="https://www.linkedin.com/in/rishika-jain-1a583a203" class="btn btn-primary">LinkedIn</a>
+          </div>
+        </div>
+
 
       </class>
 
