added my profile card

--- a/index.html
+++ b/index.html
@@ -622,6 +622,17 @@
             </div>
         </div>
 
+        <!-- Jatin Profile --> 
+        <div class="card" style="width: 17rem; margin:20px;border-radius: 10%;box-shadow: 2px 2PX 15PX 15PX rgb(104, 102, 102);">
+          <img src="images/Jatin.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Abhijit Mondal</h5>
+            <p class="card-text">Hello, I am Jatin Agrawal.Currently pursuing Bachelors in Information Technology(B-Tech) from Bhilai Institute of Technology,Durg.</p>
+            <a href="https://github.com/jatin41" class="btn btn-primary"> Github</a>
+            <a href="https://www.linkedin.com/in/jatin-agrawal-25bb961b7/" class="btn btn-primary">LinkedIn</a>
+            </div>
+        </div>
+
       </class>
 
     </div>
